Aggiunto footer e routes

--- a/frontend/src/app/components/footer/footer.component.html
+++ b/frontend/src/app/components/footer/footer.component.html
@@ -1,1 +1,10 @@
-<p>footer works!</p>
+<footer>
+  <div class="social-icons">
+    <a>
+      <fa-icon [icon]="faCoffee"></fa-icon>
+    </a>
+  </div>
+  <div class="credits">
+    <span>Powered by <a href="https://github.com/angelobdev">angelobdev</a></span>
+  </div>
+</footer>
