--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -1,17 +1,16 @@
-<div class="header">
+<header>
   <a class="logo" href="/">
-    <img src="https://freesvg.org/img/Buecher-coloured.png" alt="Libri">
     <span>La Casa del Libro</span>
   </a>
   <div class="menu">
     <nav>
       <a href="/">Home</a>
-      <a href="/">Biblioteca</a>
-      <a href="/">Contatti</a>
+      <a href="/biblioteca">Biblioteca</a>
+      <a href="/contatti">Contatti</a>
       <a href="/">Policy</a>
     </nav>
   </div>
   <div class="account">
-    <button class="login">Login</button>
+    <a class="login" href="/login">Login</a>
   </div>
-</div>
+</header>
