--- a/frontend/src/app/components/header/header.component.scss
+++ b/frontend/src/app/components/header/header.component.scss
@@ -1,12 +1,14 @@
 @import url('https://fonts.googleapis.com/css?family=Lobster&display=swap');
 
-.header {
+header {
   width: 100vw;
   height: 3rem;
 
   position: fixed;
-  top: 10px;
+  top: 0;
   left: 0;
+
+  padding-top: 0.8rem;
 
   display: flex;
   align-items: center;
@@ -14,7 +16,8 @@
   flex-direction: row;
 }
 
-.header .logo {
+header .logo {
+  width: 20%;
   height: 100%;
 
   margin-left: 1rem;
@@ -29,34 +32,28 @@
   transition: 0.4s;
 }
 
-.header .logo:hover {
+header .logo:hover {
   transform: scale(102%);
   transition: 0.4s;
 }
 
-.header .logo img {
-  height: 80%;
-  object-fit: cover;
-  margin-right: 1rem;
-}
-
-.header .logo span {
+header .logo span {
   font-family: "Lobster", sans-serif;
   font-size: 2rem;
-  color: #fefefe;
-  text-shadow: 0 0 4px #0006;
+  color: #fff;
+  text-shadow: 0 0 4px #6e046c;
 }
 
-.header .menu {
-  background: rgb(238, 174, 202);
-  background: radial-gradient(circle, rgba(238, 174, 202, 1) 0%, rgba(148, 187, 233, 1) 100%);
+header .menu {
 
-  width: 40%;
+  background: linear-gradient(to bottom right, #ff5900, #ff9900);
+
+  width: 50%;
   height: 100%;
 
   box-shadow: 0 0 10px 4px #0002;
 
-  border-radius: 0.4rem;
+  border-radius: 0.6rem;
 
   display: flex;
   align-items: center;
@@ -64,7 +61,7 @@
   flex-direction: column;
 }
 
-.header .menu nav {
+header .menu nav {
   width: 100%;
   display: flex;
   align-items: center;
@@ -72,18 +69,19 @@
   flex-direction: row;
 }
 
-.header .menu nav a {
+header .menu nav a {
   text-decoration: none;
   color: white;
   font-weight: 800;
   transition: 0.4s;
 }
 
-.header .menu nav a:hover {
+header .menu nav a:hover {
   font-size: 1.14rem;
 }
 
-.header .account {
+header .account {
+  width: 20%;
   height: 100%;
 
   margin-left: auto;
@@ -95,32 +93,41 @@
   flex-direction: row;
 }
 
-.header .account button {
-  width: 200px;
-  height: 100%;
+header .account a {
+  width: 180px;
+  height: 80%;
 
   border: none;
-  border-radius: 0.4rem;
+  border-radius: 0.8rem;
 
   box-shadow: 0 0 10px 4px #0002;
 
   font-family: "Muli", sans-serif;
   font-size: 1.1rem;
   color: white;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+
+  text-decoration: none;
+
+  margin-left: auto;
 }
 
-.header .account .login {
-  background: radial-gradient(circle, rgba(238, 174, 202, 1) 0%, rgba(148, 187, 233, 1) 100%);
+header .account .login {
+  background: linear-gradient(to bottom right, #b700ff, #8c00ff);
   transition: 0.4s;
 }
 
-.header .account .login:hover {
-  background: radial-gradient(circle, rgba(218, 184, 222, 1) 0%, rgba(148, 187, 233, 1) 100%);
+header .account .login:hover {
+  background: linear-gradient(to bottom right, #c645f8, #b55cfd);
   transition: 0.4s;
 }
 
-.header .account .login:active {
-  background: radial-gradient(circle, rgba(208, 194, 242, 1) 0%, rgba(148, 187, 233, 1) 100%);
+header .account .login:active {
+  background: linear-gradient(to bottom right, #d984fa, #c183f5);
   transition: 0.4s;
 }
 
