--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,6 @@
 <app-header></app-header>
 <div id="background"></div>
-<router-outlet></router-outlet>
-<!--<app-footer></app-footer>-->
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
+<app-footer></app-footer>
