--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -21,11 +21,16 @@ body {
 #background {
   width: 100vw;
   height: 100vh;
-  z-index: -999;
+
   position: fixed;
   top: 0;
   left: 0;
-  background: url("https://static.vecteezy.com/system/resources/previews/008/407/889/original/bold-abstract-beige-seamless-pattern-modern-minimalistic-geometric-semicircular-print-in-beige-gray-and-coral-tones-simple-decorative-repeating-texture-background-wallpaper-design-vector.jpg");
-  background-size: 30% auto;
-  box-shadow: inset 0 0 0 100vw #0003;
+
+  background: linear-gradient(to bottom, #a136e1, #8d41b9, #522073);
+
+  z-index: -999;
+}
+
+.container{
+  padding-top: 3.5rem;
 }
