--- a/frontend/src/app/components/footer/footer.component.html
+++ b/frontend/src/app/components/footer/footer.component.html
@@ -1,7 +1,13 @@
 <footer>
   <div class="social-icons">
-    <a>
-      <fa-icon [icon]="faCoffee"></fa-icon>
+    <a href="http://github.com/angelobdev" target="_blank">
+      <fa-icon [icon]="faGithub"></fa-icon>
+    </a>
+    <a href="http://linkedin.com/in/angelobdev" target="_blank">
+      <fa-icon [icon]="faLinkedin"></fa-icon>
+    </a>
+    <a href="http://twitter.com/angelobdev" target="_blank">
+      <fa-icon [icon]="faTwitter"></fa-icon>
     </a>
   </div>
   <div class="credits">
