--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -4,13 +4,18 @@
   </a>
   <div class="menu">
     <nav>
-      <a href="/">Home</a>
+      <a [routerLink]="">Home</a>
       <a href="/biblioteca">Biblioteca</a>
+      <a href="/servizi">Servizi</a>
       <a href="/contatti">Contatti</a>
-      <a href="/">Policy</a>
+      <div class="spacer"></div>
+      <button (click)="toggleLoginVisibility()">Login</button>
     </nav>
   </div>
-  <div class="account">
-    <a class="login" href="/login">Login</a>
+
+  <div id="login-container" *ngIf="loginIsVisible">
+    <button (click)="toggleLoginVisibility()"><fa-icon [icon]="faClose"></fa-icon></button>
+    <app-login></app-login>
   </div>
+
 </header>
