--- a/frontend/src/app/components/login/login.component.scss
+++ b/frontend/src/app/components/login/login.component.scss
@@ -38,11 +38,11 @@
   margin-bottom: 1rem;
 }
 
-.wrapper .content form .form-field label{
+.wrapper .content form .form-field label {
   margin-right: auto;
 }
 
-.wrapper .content form .form-field input{
+.wrapper .content form .form-field input {
   width: 100%;
   height: 2rem;
 
@@ -82,7 +82,7 @@
 .wrapper .content form .form-actions input[type=submit] {
   width: 100%;
   height: 2rem;
-  color:white;
+  color: white;
   background: #ff9900;
   border: 1px solid #0002;
   border-radius: 0.4rem;
@@ -90,7 +90,7 @@
   margin-top: 2rem;
 }
 
-.wrapper .content .divider{
+.wrapper .content .divider {
   width: 100%;
   height: 1px;
   background: #0002;
@@ -107,4 +107,33 @@
 
 .wrapper .content a {
 
+}
+
+.form-line {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+}
+
+.form-line > div:first-child {
+  margin-right: 1rem;
+}
+
+.error-container {
+  width: 100%;
+  background: red;
+  border-radius: 0.4rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0.4rem;
+  margin: 0.4rem;
+}
+
+.error-container > span {
+  color: white;
+  font-weight: bold;
 }
