--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -5,16 +5,16 @@
   <div class="menu">
     <nav>
       <!--PUBLIC CONTENT-->
-      <a [routerLink]="">Home</a>
-      <a href="/biblioteca">Biblioteca</a>
-      <a href="/servizi">Servizi</a>
-      <a href="/contatti">Contatti</a>
+      <a routerLink="">Home</a>
+      <a routerLink="/biblioteca">Biblioteca</a>
+      <a routerLink="/servizi">Servizi</a>
+      <a routerLink="/contatti">Contatti</a>
       <div class="spacer"></div>
       <!--LOGGED CONTENT-->
       <div class="right-content" *ngIf="isLoggedIn">
-        <img alt="Avatar" [ngSrc]="this.avatar">
+        <img class="avatar" alt="Avatar" [src]="this.avatar">
         <span>Ciao, {{username}} </span>
-        <button (click)="logout()">Logout</button>
+        <button (click)="logout()" class="logout">Esci</button>
       </div>
       <!--NOT LOGGED CONTENT-->
       <div class="right-content" *ngIf="!isLoggedIn">
