--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -7,8 +7,7 @@
       <!--PUBLIC CONTENT-->
       <a routerLink="">Home</a>
       <a routerLink="/biblioteca">Biblioteca</a>
-      <a routerLink="/servizi">Servizi</a>
-      <a routerLink="/contatti">Contatti</a>
+      <a routerLink="/azienda">Azienda</a>
       <div class="spacer"></div>
       <!--LOGGED CONTENT-->
       <div class="right-content" *ngIf="isLoggedIn">
