--- a/frontend/src/app/routes/home/home.component.html
+++ b/frontend/src/app/routes/home/home.component.html
@@ -1,1 +1,24 @@
-<p>home works!</p>
+<div class="home">
+    <div class="area maxi image">
+        <span>La tua biblioteca digitale!</span>
+        <a routerLink="biblioteca">Scopri &rightarrow;</a>
+    </div>
+    <div class="area mini">
+        <div class="paragrafi">
+            <p class="testo centrato zoom">Leggi ciò che vuoi...</p>
+            <p class="testo centrato zoom">Leggi quando vuoi...</p>
+            <p class="testo centrato zoom">Leggi dove vuoi...</p>
+        </div>
+    </div>
+    <div class="area maxi image">
+        <span>Trova ciò che fa per te!</span>
+        <a routerLink="biblioteca">Esplora &rightarrow;</a>
+    </div>
+    <div class="area mini">
+        <div class="paragrafi">
+            <p class="testo giustificato">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris congue ligula at mauris consectetur maximus. Praesent suscipit risus ac volutpat consectetur. Duis eget ante id turpis semper aliquam. Nulla dui sem, suscipit sit amet massa in, scelerisque fermentum mi. Maecenas tincidunt ante id risus commodo, non faucibus metus tincidunt. Mauris non consequat nunc, ac aliquam nulla. Ut pulvinar pretium suscipit. Aenean bibendum dictum est eu dignissim. Suspendisse porta tortor a elit tristique elementum. Mauris non interdum ex, et lobortis ex.</p>
+            <p class="testo giustificato">Etiam condimentum orci et ligula ultricies sollicitudin. Phasellus ornare tortor at nunc tempor fringilla. Nam gravida, metus ut commodo porta, massa ex elementum urna, et egestas tortor felis vel erat. In nulla magna, dapibus at tincidunt at, egestas id turpis. Proin rhoncus consectetur ultricies. Mauris ac faucibus sapien. Donec ut mauris eu ipsum feugiat aliquam id nec velit. Vivamus porta ante eu ipsum sollicitudin tristique. Cras a tempor ante. Cras accumsan nulla eget lectus aliquet, eget luctus sapien porttitor. Cras vulputate iaculis pretium.</p>
+            <p class="testo giustificato">Maecenas placerat id sapien quis rutrum. Vestibulum sollicitudin tincidunt accumsan. Aliquam dolor nisl, iaculis vitae enim vitae, congue sagittis massa. Proin lacinia neque in augue congue, imperdiet tincidunt elit faucibus. Phasellus mattis suscipit tempus. Mauris accumsan felis porta mauris placerat consequat. Suspendisse ipsum augue, molestie et tempus et, sagittis vitae metus. In porttitor porta commodo. Ut quis metus vel lectus feugiat laoreet</p>
+        </div>
+    </div>
+</div>
