--- a/frontend/src/app/components/login/login.component.scss
+++ b/frontend/src/app/components/login/login.component.scss
@@ -83,7 +83,7 @@
   width: 100%;
   height: 2rem;
   color: white;
-  background: #ff9900;
+  background: #E09F3E;
   border: 1px solid #0002;
   border-radius: 0.4rem;
   box-shadow: 0 0 5px #0002;
