Implementato Carrello al 90%

--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -48,7 +48,7 @@
         <button (click)="toggleCartVisibility()" class="close-button">
             <fa-icon [icon]="faClose"></fa-icon>
         </button>
-        <h1>Carrello</h1>
+        <app-carrello></app-carrello>
     </div>
 
 </header>
