--- a/frontend/src/app/routes/biblioteca/biblioteca.component.html
+++ b/frontend/src/app/routes/biblioteca/biblioteca.component.html
@@ -21,8 +21,7 @@
         <p>{{libro.quantita}} in stock</p>
       </div>
       <div class="buttons">
-        <button (click)="aggiungiLibroAlCarrello(libro.id)">Acquista</button>
-        <button>Noleggia</button>
+        <button (click)="aggiungiLibroAlCarrello(libro.id)">Aggiungi al Carrello</button>
       </div>
       <p>ISBN: {{libro.id + 9788800000000}}</p>
     </div>
