--- a/frontend/src/app/routes/biblioteca/biblioteca.component.scss
+++ b/frontend/src/app/routes/biblioteca/biblioteca.component.scss
@@ -126,8 +126,8 @@
 }
 
 .bookshelf .book .buttons button {
-  width: 6rem;
-  height: 3rem;
+  width: 100%;
+  height: 2rem;
   color: white;
   border: none;
   border-radius: 0.6rem;
