--- a/frontend/src/app/components/carrello/carrello.component.html
+++ b/frontend/src/app/components/carrello/carrello.component.html
@@ -11,14 +11,49 @@
     <p *ngIf="carrello.libri.length == 0">Nessun libro nel carrello</p>
     <ul>
       <li *ngFor="let carrelloLibro of carrello.libri">
-        <span>{{carrelloLibro.libro.titolo}}</span>
-        <span>{{carrelloLibro.libro.prezzo}}€</span>
-        <span>{{carrelloLibro.quantita}}pz</span>
-        <button (click)="rimuoviLibro(carrelloLibro.libro.id)">
-          <fa-icon [icon]="faRemove"></fa-icon>
-        </button>
+
+        <div class="infobox">
+          <span>{{carrelloLibro.libro.titolo}}</span>
+          <span>{{carrelloLibro.libro.prezzo}} €/cad</span>
+        </div>
+
+        <div class="quantita">
+          <button (click)="rimuoviLibro(carrelloLibro.libro.id, 1)">-</button>
+          <span>{{carrelloLibro.quantita}}</span>
+          <button (click)="aggiungiLibro(carrelloLibro.libro.id, 1)">+</button>
+        </div>
+
       </li>
     </ul>
+  </div>
+
+  <div class="consegna">
+    <h3>Scegli la modalit&agrave; di consegna:</h3>
+
+    <div class="modalita">
+      <label>
+        <input [value]="0" [(ngModel)]="modalita" name="spedizione" type="radio" [checked]="isChecked"/> Spedizione
+      </label>
+      <label>
+        <input [value]="1" [(ngModel)]="modalita" name="ritiro" type="radio" [checked]="!isChecked"/> Ritiro in sede
+      </label>
+    </div>
+
+    <div class="form" *ngIf="modalita == 0">
+      <label>
+        Indirizzo di spedizione:
+        <input type="text" placeholder="Destinazione" [(ngModel)]="spedizione">
+      </label>
+    </div>
+
+    <div class="form" *ngIf="modalita == 1">
+      <label>
+        Scegli la data di ritiro:
+        <input [(ngModel)]="ritiro" type="date" min="{{dataMinima | date: 'yyyy-MM-dd'}}"
+               [value]="dataMinima">
+      </label>
+    </div>
+
   </div>
 
   <div class="info">
