--- a/frontend/src/app/components/carrello/carrello.component.scss
+++ b/frontend/src/app/components/carrello/carrello.component.scss
@@ -51,30 +51,127 @@
   box-shadow: 0 2px 2px #0004;
 }
 
-.carrello .libri ul li span:first-child {
-  width: 70%;
+.carrello .libri ul li .infobox {
+  width: 60%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
 }
 
-.carrello .libri ul li button {
+.carrello .libri ul li .quantita {
+  width: 40%;
+  height: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  flex-direction: row;
+}
+
+.carrello .libri ul li .quantita span {
+  width: 2rem;
+  height: 1.6rem;
+  padding: 0;
+  margin: 0;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  background: white;
+  border: none;
+
+  color:black;
+}
+
+.carrello .libri ul li .quantita button {
   color: white;
   width: 1.6rem;
   height: 1.6rem;
   background: #de2b2b;
-  border-radius: 0.4rem;
-  border: none;
   transition: 0.4s;
+  border: none;
+  padding: 0;
 }
 
-.carrello .libri ul li button:hover {
+.carrello .libri ul li .quantita button:first-child {
+  border-radius: 0.4rem 0 0 0.4rem;
+}
+
+.carrello .libri ul li .quantita button:last-child {
+  border-radius: 0 0.4rem 0.4rem 0;
+}
+
+.carrello .libri ul li .quantita button:hover {
   background: #de4343;
   transition: 0.4s;
   transform: scale(102%);
   cursor: pointer;
 }
 
-.carrello .libri ul li button:active {
+.carrello .libri ul li .quantita button:active {
   background: #d96565;
   transition: 0.4s;
+}
+
+.carrello .consegna {
+  width: 100%;
+  height: 14rem;
+
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: column;
+
+  border-top: 1px solid #0002;
+  border-bottom: 1px solid #0002;
+  padding-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.carrello .consegna .modalita {
+  width: 80%;
+  height: 2rem;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+}
+
+.carrello .consegna .form {
+  width: 100%;
+}
+
+.carrello .consegna .form label{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.carrello .consegna .form input{
+  width: 90%;
+  height: 2rem;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+  border: 1px solid #0002;
+  border-radius: 0.4rem;
+
+}
+
+.carrello .consegna .form input[type=date]{
+  font-size: 1.2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
 }
 
 .carrello .info {
