Implementato "Ricorda" login

--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -50,7 +50,7 @@
       </div>
       <div class="form-extra">
         <div>
-          <input type="checkbox" name="ricordami">
+          <input type="checkbox" name="ricordami" [(ngModel)]="loginForm.remember">
           <label>Ricordami</label>
         </div>
         <a onclick="alert('Non ancora implementato')" routerLink="#">Password dimenticata?</a>
