--- a/frontend/src/app/components/carrello/carrello.component.html
+++ b/frontend/src/app/components/carrello/carrello.component.html
@@ -27,7 +27,7 @@
     </ul>
   </div>
 
-  <div class="consegna">
+  <div class="consegna" *ngIf="carrello.libri.length > 0">
     <h3>Scegli la modalit&agrave; di consegna:</h3>
 
     <div class="modalita">
